# VIR-SLAM

./: README.md
src/VIR_VINS/config/: vins_rviz_config.rviz
src/VIR_VINS/config/euroc/: euroc_config.yaml
src/VIR_VINS/config/realsense/: realsense_color_config.yaml  realsense_d435_self.yaml  realsense_d435i_me.yaml  realsense_spiri.yaml
src/VIR_VINS/feature_tracker/: CMakeLists.txt  package.xml
src/VIR_VINS/feature_tracker/src/: feature_tracker_node.cpp
src/VIR_VINS/uwb_posegraph/: CMakeLists.txt  package.xml
src/VIR_VINS/uwb_posegraph/src/: keyframe.cpp  keyframe.h  uwb_factor.h  uwb_posegraph.cpp  uwb_posegraph.h  uwb_posegraph_node.cpp
src/VIR_VINS/vir_estimator/: CMakeLists.txt  package.xml
src/VIR_VINS/vir_estimator/launch/: euroc_mystudy.launch  realsense_color.launch  realsense_fisheye.launch  uvi.launch  vins_rviz.launch  vir_euroc.launch  vir_rsd435i.launch  vir_spiri.launch  vir_spiriBag.launch  vir_spiriRobot.launch
src/VIR_VINS/vir_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  parameters.cpp  parameters.h
src/benchmark_publisher/launch/: publish.launch
src/pg_standalone/: CMakeLists.txt  package.xml
src/pg_standalone/src/: GaussSmoothen.h  initial_anchor.h  pg_standalone.cpp  pg_standalone.h  pg_standalone_node.cpp  test.cpp
src/utlitypkg/: CMakeLists.txt  package.xml
src/utlitypkg/src/: groundtruthodo.cpp
src/uwb_pypkg/: CMakeLists.txt  package.xml
src/uwb_pypkg/src/: uwbCalibGPmodel.pickle  uwbCalibPNmodel.pickle  uwb_node.py  uwb_outlierRej.py  uwbdriver.py
(+4 files in other folders)
